--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,20 +43,21 @@
        <%= link_to "Home", root_path, class: "navbar-brand" %>
      </div>
      <!-- Collect the nav links, forms, and other content for toggling -->
-     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-       <ul class="nav navbar-nav navbar-right">
-         <% if user_signed_in? %>
-           <li class="dropdown">
-             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-               <% if current_user.avatar.blank? == false %>
-                 <%= image_tag current_user.avatar.url, size:25, class: "user-pic-nav" %>
-               <% end %>
-               @<%= current_user.username %> <span class="caret"></span></a>
-             <ul class="dropdown-menu">
-               
-               <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-             </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+           <% if user_signed_in? %>
+             <li class="dropdown">
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
+               <ul class="dropdown-menu">
+                 <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+                 <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+               </ul>
+             </li>
+           <% else %>
+             <li><%= link_to "Sign In", new_user_session_path %></li>
+          
+         </ul>
            </li>
          <% end %>
        </ul>
